--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
   </header>
 
   <div class="container">
-    <p class="date">20xx/01/23</p>
+    <script>
+      /* 
+      日付を表示する
+      後で今日の日付にかえる
+      */
+      document.write('<p class="date">20xx/01/23</p>');
+    </script>
   </div>
 </body>
 
