[update] Calculation method in JS

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       後で今日の日付にかえる
       */
       document.write('<p class="date">20xx/01/23</p>');
+      document.write('10 + 3の計算結果は、' + (10+3) + 'です' );
     </script>
   </div>
 </body>
